--- a/xray/config.json
+++ b/xray/config.json
@@ -1,6 +1,6 @@
 {
   "log": {
-    "access": "/var/log/xray/access.log",
+    "access": "none",
     "error": "/var/log/xray/error.log",
     "loglevel": "warning"
   },
