--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -18,25 +18,25 @@ unfocused_hollow = true
 style = { shape = "Block", blinking = "Off" }
 
 [colors.primary]
-background = '#282828'
-foreground = '#ebdbb2'
+background = '#000000'
+foreground = '#bfbfbf'
 
 [colors.normal]
-black   = '#282828'
-red     = '#cc241d'
-green   = '#98971a'
-yellow  = '#d79921'
-blue    = '#458588'
-magenta = '#b16286'
-cyan    = '#689d6a'
-white   = '#a89984'
+black   = '#000000'
+red     = '#ff5555'
+green   = '#50fa7b'
+yellow  = '#f1fa8c'
+blue    = '#bd93f9'
+magenta = '#ffa0ff'
+cyan    = '#8be9fd'
+white   = '#bfbfbf'
 
 [colors.bright]
-black   = '#928374'
-red     = '#fb4934'
-green   = '#b8bb26'
-yellow  = '#fabd2f'
-blue    = '#83a598'
-magenta = '#d3869b'
-cyan    = '#8ec07c'
-white   = '#ebdbb2'
+black   = '#525252'
+red     = '#ff6e67'
+green   = '#69ff94'
+yellow  = '#ffffa5'
+blue    = '#d6acff'
+magenta = '#ffb0ff'
+cyan    = '#a4ffff'
+white   = '#ffffff'
