--- a/xray/nginx.conf
+++ b/xray/nginx.conf
@@ -37,17 +37,19 @@ http {
 			return 200 "";
 		}
 
-		location /grpcpath { # grpcSettings.serviceName
-			if ($content_type !~ "application/grpc") {
+		location /wspath { # wsSettings.path
+			if ($http_upgrade != "websocket") {
 				return 404;
 			}
-			access_log off;
-			client_max_body_size 0;
-			client_body_buffer_size 512k;
-			grpc_set_header X-Real-IP $remote_addr;
-			client_body_timeout 52w;
-			grpc_read_timeout 52w;
-			grpc_pass grpc://127.0.0.1:10101;
+			proxy_pass http://127.0.0.1:10101;
+			proxy_redirect off;
+			proxy_http_version 1.1;
+			proxy_set_header Upgrade $http_upgrade;
+			proxy_set_header Connection "upgrade";
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_read_timeout 5d;
 		}
 	}
 }
