change color scheme

--- a/config/picom/picom_dwm.conf
+++ b/config/picom/picom_dwm.conf
@@ -1,25 +1,11 @@
 backend = "glx";
 use-damage = true;
-# glx-no-stencil = true;
 glx-copy-from-front = false;
 
-blur: {
-	method = "box";
-	size = 2;
-};
+blur: { method = "box"; size = 2; }
 
 rules = (
-	{
-		match = "class_g = 'slop'";
-		blur-background = false;
-	},
-	{
-		match = "window_type = 'popup_menu'";
-		blur-background = false;
-	},
-	{
-		match = "window_type = 'utility'";
-		blur-background = false;
-	}
+	{ match = "class_g = 'slop'"; blur-background = false; },
+	{ match = "window_type = 'popup_menu'"; blur-background = false; },
+	{ match = "window_type = 'utility'"; blur-background = false; }
 )
-
