--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -1,42 +1,41 @@
 [general]
 live_config_reload = false
-ipc_socket = false
+ipc_socket         = false
 
 [window]
-padding = { x = 10, y = 10 }
+padding     = { x = 10, y = 10 }
 decorations = "None"
-# opacity = 0.8
 
 [font]
-normal = { family = "JetBrainsMono Nerd Font", style = "Regular" }
-bold = { family = "JetBrainsMono Nerd Font", style = "SemiBold" }
-italic = { family = "JetBrainsMono Nerd Font", style = "Italic" }
+normal      = { family = "JetBrainsMono Nerd Font", style = "Regular" }
+bold        = { family = "JetBrainsMono Nerd Font", style = "SemiBold" }
+italic      = { family = "JetBrainsMono Nerd Font", style = "Italic" }
 bold_italic = { family = "JetBrainsMono Nerd Font", style = "SemiBold Italic" }
 
 [cursor]
 unfocused_hollow = true
-style = { shape = "Block", blinking = "Off" }
+style            = { shape = "Block", blinking = "Off" }
 
 [colors.primary]
-background = '#000000'
-foreground = '#bfbfbf'
+background = "#000000"
+foreground = "#cccccc"
 
 [colors.normal]
-black   = '#000000'
-red     = '#ff5555'
-green   = '#50fa7b'
-yellow  = '#f1fa8c'
-blue    = '#bd93f9'
-magenta = '#ffa0ff'
-cyan    = '#8be9fd'
-white   = '#bfbfbf'
+black   = "#000000"
+red     = "#ff5555"
+green   = "#50fa7b"
+yellow  = "#f1fa8c"
+blue    = "#bd93f9"
+magenta = "#ffa0ff"
+cyan    = "#8be9fd"
+white   = "#cccccc"
 
 [colors.bright]
-black   = '#525252'
-red     = '#ff6e67'
-green   = '#69ff94'
-yellow  = '#ffffa5'
-blue    = '#d6acff'
-magenta = '#ffb0ff'
-cyan    = '#a4ffff'
-white   = '#ffffff'
+black   = "#525252"
+red     = "#ff6e67"
+green   = "#69ff94"
+yellow  = "#ffffa5"
+blue    = "#d6acff"
+magenta = "#ffb0ff"
+cyan    = "#a4ffff"
+white   = "#ffffff"
