--- a/config/alacritty/alacritty.toml
+++ b/config/alacritty/alacritty.toml
@@ -7,10 +7,10 @@ padding     = { x = 10, y = 10 }
 decorations = "None"
 
 [font]
-normal      = { family = "JetBrainsMono Nerd Font", style = "Regular" }
-bold        = { family = "JetBrainsMono Nerd Font", style = "SemiBold" }
-italic      = { family = "JetBrainsMono Nerd Font", style = "Italic" }
-bold_italic = { family = "JetBrainsMono Nerd Font", style = "SemiBold Italic" }
+normal      = { family = "JetBrainsMono Nerd Font", style = "SemiBold" }
+bold        = { family = "JetBrainsMono Nerd Font", style = "Bold" }
+italic      = { family = "JetBrainsMono Nerd Font", style = "SemiBold Italic" }
+bold_italic = { family = "JetBrainsMono Nerd Font", style = "Bold Italic" }
 
 [cursor]
 unfocused_hollow = true
