--- a/sb/Makefile
+++ b/sb/Makefile
@@ -2,8 +2,11 @@ BIN := sb
 
 .PHONY: build
 build:
-	go build -ldflags="-s -w" -v -o $(BIN)
+ifneq (,$(findstring with_pulse,$(TAGS)))
+	go run ./cmd/gen_volume_pulse_constants
+endif
+	go build -tags "$(TAGS)" -ldflags="-s -w" -v -o $(BIN)
 
 .PHONY: clean
 clean:
-	rm -vf $(BIN)
+	rm -vf $(BIN) ./components/volume_pulse.h
